--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,28 +6,36 @@
   <div class="col-lg-12 text-center"
     <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
     <p class="lead">Najlepsze filmy, najlepsi aktorzy!</p>
+</div>
+  <div class="btn-group" role="group">
+    <div class="col-lg-12 mb-4">
+      <button type="button" class="btn btn-outline-info" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <a href="{{ url_for('homepage', list_type="now_playing") }}">Now Playing</a>
+  </button> 
+
+  <button type="button" class="btn btn-outline-info" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <a href="{{ url_for('homepage', list_type="top_rated") }}">Top rated</a>
+  </button>
+
+  <button type="button" class="btn btn-outline-info" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <a href="{{ url_for('homepage', list_type="upcoming") }}">Upcoming</a>
+  </button>
+
+  <button type="button" class="btn btn-outline-info" data-toggle="button" aria-pressed="false" autocomplete="off">
+    <a href="{{ url_for('homepage', list_type="popular") }}">Popular</a>
+  </button>
   </div>
-  <div class="col-lg-12 mb-4">
-    <a href="{{ url_for('homepage', list_type='now_playing') }}" class="btn btn-outline-info">Now Playing</a>
-  </div>
-  <div class="col-lg-12 mb-4">
-    <a href="{{ url_for('homepage', list_type='upcoming') }}" class="btn btn-outline-info">Upcoming</a>
-  </div>
-  <div class="col-lg-12 mb-4">
-    <a href="{{ url_for('homepage', list_type='popular') }}" class="btn btn-outline-info">Popular</a>
-  </div>
-  <div class="col-lg-12 mb-4">
-    <a href="{{ url_for('homepage', list_type='top_rated') }}" class="btn btn-outline-info">Top Rated</a>
-  </div>
-  {% for movie in movies %}
- <div class="col-lg-3 col-md-6 mb-4">
+</div>
+
+{% for movie in movies %}
+<div class="col-lg-3 col-md-6 mb-4">
      <div class="card h-100">
          <img class="card-img-top" src="{{ tmdb_image_url(movie.poster_path, "w780") }}" alt="">
          <div class="card-body">
              <h4 class="card-title">{{ movie.title }}</h4>
          </div>
          <div class="card-footer text-center">
-             <a href="#" class="btn btn-primary">Pokaż więcej</a>
+             <a href="{{ url_for('movie_details', movie_id=movie.id) }}">Pokaż więcej</a>
          </div>
      </div>
  </div>
